--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -156,6 +156,14 @@
             margin-top: 10px;
             align-items: center;
             width: 100%;
+            position: relative;
+        }
+
+        #gameSelect {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 10;
         }
 
         #controls {
@@ -539,19 +547,16 @@
             <div id="match-info"></div>
             <div id="players-info"></div>
             <div id="top-row">
+                <select id="gameSelect">
+                    <option value="0">Game 1</option>
+                </select>
                 <div class="right-group">
                     <div id="black-pips" class="pips-above-board">0</div>
                 </div>
             </div>
         </div>
 
-        <div class="board-wrapper" style="position: relative; margin: 0 auto 20px;">
-            <canvas id="boardCanvas" width="800" height="800"></canvas>
-            <select id="gameSelect"
-                style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10;">
-                <option value="0">Game 1</option>
-            </select>
-        </div>
+        <canvas id="boardCanvas" width="800" height="800"></canvas>
 
         <div class="board-footer">
             <div class="move-info" id="moveInfo">Initial Position</div>
