--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -152,7 +152,7 @@
         #top-row {
             margin: 0px 0;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             margin-top: 10px;
             align-items: center;
             width: 100%;
