--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -151,8 +151,6 @@
 
         #top-row {
             margin: 0px 0;
-            display: flex;
-            justify-content: flex-end;
             margin-top: 10px;
             align-items: center;
             width: 100%;
@@ -164,6 +162,11 @@
             left: 50%;
             transform: translateX(-50%);
             z-index: 10;
+        }
+
+        .right-group {
+            position: absolute;
+            right: 0;
         }
 
         #controls {
