--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -152,10 +152,19 @@
         #top-row {
             margin: 0px 0;
             display: flex;
-            justify-content: space-between;
             margin-top: 10px;
             align-items: center;
             width: 100%;
+            position: relative;
+        }
+
+        #gameSelect {
+            margin: 0 auto;
+        }
+
+        .right-group {
+            position: absolute;
+            right: 0;
         }
 
         #controls {
@@ -539,7 +548,6 @@
             <div id="match-info"></div>
             <div id="players-info"></div>
             <div id="top-row">
-                <div></div>
                 <select id="gameSelect">
                     <option value="0">Game 1</option>
                 </select>
