--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -287,6 +287,7 @@
             display: flex;
             flex-direction: column;
             gap: 5px;
+            align-items: flex-start;
         }
 
         @media (max-width: 768px) {
