--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1043,7 +1043,7 @@
             const opp_pos = temp_positions[playerType === 'first' ? 'second' : 'first'];
 
             let fromX, fromY;
-
+            const fromStr = move.from.toString();
             const rawFrom = move.from;
             const fromIsBar = (rawFrom === 'bar' || rawFrom === 25 || rawFrom === '25');
 
