--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -286,7 +286,6 @@
         #checkboxes {
             display: flex;
             flex-direction: column;
-            gap: 5px;
             align-items: flex-start;
         }
 
@@ -577,29 +576,30 @@
                 <button onclick="nextTurn()" id="nextBtn" title="Next Move"></button>
             </div>
             <div id="checkboxes">
-                <table style="border: none; width: 100%;">
+                <table style="border: none; border-collapse: collapse; width: 100%;">
                     <tr>
-                        <td style="text-align: left;">Выслать скриншот экрана</td>
-                        <td style="text-align: right;"><button onclick="takeScreenshot()" id="screenshotBtn"
-                                title="Take Screenshot"></button></td>
+                        <td style="text-align: left; border: none;">Выслать скриншот экрана</td>
+                        <td style="text-align: right; border: none;"><button onclick="takeScreenshot()"
+                                id="screenshotBtn" title="Take Screenshot"></button></td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">Добавить скриншот в буфер обмена</td>
-                        <td style="text-align: right;"><button onclick="saveScreenshot()" id="screenSaveBtn"
-                                title="Save Screenshot"></button></td>
+                        <td style="text-align: left; border: none;">Добавить скриншот в буфер обмена</td>
+                        <td style="text-align: right; border: none;"><button onclick="saveScreenshot()"
+                                id="screenSaveBtn" title="Save Screenshot"></button></td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">Выслать архив со скриншотами</td>
-                        <td style="text-align: right;"><button onclick="uploadScreenshots()" id="screenUploadBtn"
-                                title="Upload Screenshots"></button></td>
+                        <td style="text-align: left; border: none;">Выслать архив со скриншотами</td>
+                        <td style="text-align: right; border: none;"><button onclick="uploadScreenshots()"
+                                id="screenUploadBtn" title="Upload Screenshots"></button></td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">Убрать данные матча на скриншоте</td>
-                        <td style="text-align: right;"><input type="checkbox" id="hideInfoCheckbox"></td>
+                        <td style="text-align: left; border: none;">Убрать данные матча на скриншоте</td>
+                        <td style="text-align: right; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">Убрать анимацию шашек</td>
-                        <td style="text-align: right;"><input type="checkbox" id="skipAnimationCheckbox"></td>
+                        <td style="text-align: left; border: none;">Убрать анимацию шашек</td>
+                        <td style="text-align: right; border: none;"><input type="checkbox" id="skipAnimationCheckbox">
+                        </td>
                     </tr>
                 </table>
             </div>
