--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -594,11 +594,11 @@
                     </tr>
                     <tr>
                         <td style="text-align: left; border: none;">Убрать данные матча на скриншоте</td>
-                        <td style="text-align: right; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
+                        <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
                     </tr>
                     <tr>
                         <td style="text-align: left; border: none;">Убрать анимацию шашек</td>
-                        <td style="text-align: right; border: none;"><input type="checkbox" id="skipAnimationCheckbox">
+                        <td style="text-align: center; border: none;"><input type="checkbox" id="skipAnimationCheckbox">
                         </td>
                     </tr>
                 </table>
