--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -594,11 +594,13 @@
                     </tr>
                     <tr>
                         <td style="text-align: left; border: none;">Убрать данные матча на скриншоте</td>
-                        <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
+                        <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"
+                                style="margin-left: 10px;"></td>
                     </tr>
                     <tr>
                         <td style="text-align: left; border: none;">Убрать анимацию шашек</td>
-                        <td style="text-align: center; border: none;"><input type="checkbox" id="skipAnimationCheckbox">
+                        <td style="text-align: center; border: none;"><input type="checkbox" id="skipAnimationCheckbox"
+                                style="margin-left: 10px;">
                         </td>
                     </tr>
                 </table>
